k8s/image-wizard-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-wizard-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-wizard-api
  template:
    metadata:
      labels:
        app: image-wizard-api
    spec:
      containers:
        - name: image-wizard-api
          image: jordanfox/image-wizard-api:master
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: image-wizard-api-srvc
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: image-wizard-api
