k8s/img-switch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img-switch-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: img-switch-frontend
  template:
    metadata:
      labels:
        app: img-switch-frontend
    spec:
      containers:
        - name: img-switch-frontend
          image: jordanfox/img-switch-frontend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: img-switch-frontend-srvc
spec:
  type: NodePort
  selector:
    app: img-switch-frontend
  ports:
    - port: 3000
      targetPort: 3000
