k8s/img-switch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: img-switch-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: img-switch-api-srvc
                port:
                  number: 5000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: img-switch-frontend-srvc
                port:
                  number: 3000
